todo-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: project

spec:
  replicas: 1

  selector:
    matchLabels:
      app: todo-app

  template:
    metadata:
      labels:
        app: todo-app

    spec:
      volumes:
        - name: todo-pv
          persistentVolumeClaim:
            claimName: todo-pvc

      containers:
        - name: todo-app
          image: olekacak/todo-app:2.2
          imagePullPolicy: Always

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: todo-pv
              mountPath: /shared
