todo-app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc

spec:
  type: ClusterIP

  selector:
    app: todo-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
